--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ header {
     background-color: #333;
     color: #fff;
     padding: 1em 0;
+    position: relative;
 }
 
 nav ul {
@@ -17,6 +18,7 @@ nav ul {
     padding: 0;
     display: flex;
     justify-content: center;
+    margin: 0;
 }
 
 nav ul li {
@@ -27,6 +29,16 @@ nav ul li a {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
+}
+
+.menu-toggle {
+    display: none;
+    cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: 15px;
+    font-size: 24px;
+    color: #fff;
 }
 
 main {
@@ -83,4 +95,17 @@ form button {
 
 form button:hover {
     background-color: #45a049;
+}
+
+@media (max-width: 768px) {
+    nav ul {
+        flex-direction: column;
+        display: none;
+    }
+    nav ul.open {
+        display: flex;
+    }
+    .menu-toggle {
+        display: block;
+    }
 }
