--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@ body {
     color: #333;
 }
 
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
 header {
     background-color: #333;
     color: #fff;
@@ -13,7 +18,16 @@ header {
     position: relative;
 }
 
-nav ul {
+header .logo {
+    display: inline-block;
+}
+
+header nav {
+    display: inline-block;
+    float: right;
+}
+
+header nav ul {
     list-style: none;
     padding: 0;
     display: flex;
@@ -21,17 +35,17 @@ nav ul {
     margin: 0;
 }
 
-nav ul li {
+header nav ul li {
     margin: 0 15px;
 }
 
-nav ul li a {
+header nav ul li a {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
 }
 
-.menu-toggle {
+header .menu-toggle {
     display: none;
     cursor: pointer;
     position: absolute;
@@ -41,42 +55,51 @@ nav ul li a {
     color: #fff;
 }
 
-main {
-    padding: 2em;
+.hero {
+    background: url('https://via.placeholder.com/1200x600') no-repeat center center/cover;
+    color: white;
+    text-align: center;
+    padding: 4em 0;
+}
+
+.hero h2 {
+    font-size: 3em;
+}
+
+.about, .services, .contact {
+    padding: 4em 0;
     text-align: center;
 }
 
-section {
-    margin-bottom: 2em;
+.about img {
+    width: 50%;
+    height: auto;
+    margin-top: 1em;
 }
 
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1em 0;
+.services ul {
+    list-style: none;
+    padding: 0;
 }
 
-h1, h2 {
-    margin-bottom: 0.5em;
+.services ul li {
+    background: #e7e7e7;
+    margin: 1em 0;
+    padding: 1em;
+    border-radius: 5px;
 }
 
-p {
-    font-size: 1.2em;
-    margin-bottom: 1em;
-}
-
-form {
+.contact form {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-form label {
+.contact form label {
     margin: 10px 0 5px;
 }
 
-form input, form textarea {
+.contact form input, .contact form textarea {
     width: 80%;
     padding: 10px;
     margin-bottom: 10px;
@@ -84,7 +107,7 @@ form input, form textarea {
     border: 1px solid #ccc;
 }
 
-form button {
+.contact form button {
     padding: 10px 20px;
     background-color: #4CAF50;
     color: white;
@@ -93,8 +116,15 @@ form button {
     cursor: pointer;
 }
 
-form button:hover {
+.contact form button:hover {
     background-color: #45a049;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1em 0;
 }
 
 @media (max-width: 768px) {
